<resources>
    <string name="app_name">XINJIALI</string>
    <string name="user_name">游客</string>
    <string name="home">企业首页</string>
    <!--
    <string name="product">企业产品</string>
    -->
    <string name="contact">联系我们</string>
    <string name="favorite">Favorite</string>
    <string name="others">其他</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="share">分享</string>

    <string name="ceramic">CERAMIC</string>
    <string name="c75x150">75x150</string>
    <string name="c100x100">100x100</string>
    <string name="c100x200">100x200</string>
    <string name="c100x300">100x300</string>
    <string name="c100x400">100x400</string>
    <string name="c150x150">150x150</string>
    <string name="c200x200">200x200</string>
    <string name="c200x300">200x300</string>
    <string name="c250x400">250x400</string>
    <string name="c300x300">300x300</string>
    <string name="c300x600">300x600</string>
    <string name="c400x400">400x400</string>
    <string name="c600x600">600x600</string>
    
    <string name="full">FULL GLAZED POLISHED</string>
    <string name="fulltile">FULL GLAZED POLISHED TILE</string>
    
    <string name="porcelain">PORCELAIN POLISHED</string>
    <string name="doubleloading">Double Loading</string>
    <string name="pilates">Pilates</string>
    <string name="solublesalt">Soluble Salt</string>
    
    <string name="rustic">RUSTIC</string>
    <string name="r200x400">200x400</string>
    <string name="r300x300">300x300</string>
    <string name="r400x400">400x400</string>
    <string name="r600x600">600x600</string>

    <string name="vitrified">VITRIFIED</string>
    <string name="v28x30cm">28x30cm</string>
    <string name="v28x60cm">28x60cm</string>
    <string name="v30x30cm">30x30cm</string>
    <string name="v40x40cm">40x40cm</string>
    <string name="v60x60cm">60x60cm</string>


    <string name="colors">Colors</string>
    <string name="photo_data">Photo data</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="identifier">Identifier</string>
    <string name="owner">Owner</string>
    <string name="secret">Secret</string>
    <string name="server">Server id</string>
    <string name="title">Title</string>
    <string name="is_public">Public photo</string>
    <string name="is_friend">Friend\'s photo</string>
    <string name="is_family">Family\'s photo</string>
    <string name="pallete">Color palette</string>

    <string name="version_prefix">V</string>
    <string name="coming_soon">Coming soon :)</string>
    <string name="not_supported">Your phone is not supported :(</string>
    <string name="copyed">Copied!</string>

    <string name="github_repo">GitHub repository</string>

    <!-- Shared elements -->
    <string name="shared_element_photo">photo_element</string>

    <string name="activity_transition_mills">200</string>

    <string name="facebook_app_id">464110687102972</string>

    <!-- Vector -->
    <string name="path_pause">M 6,19 L 10,19 L 10,5 L 6,5 L 6,19 z M 14,19 L 18,19 L 18,5 L 14,5 L 14,19 z</string>
    <string name="path_play">M 5, 18.06 L 12,18.06 L 12,5.94 L 12,5.94 L 5,18.06 z M 12,18.06 L 19,18.06 L 12,5.94 L 12,5.94 L 12,18.06 z</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
