<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NavigationViewActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vitrified"
            android:icon="@drawable/ic_favorite_grey_600_24dp"
            android:title="@string/vitrified" />
        <item
            android:id="@+id/nav_ceramic"
            android:icon="@drawable/ic_favorite_grey_600_24dp"
            android:title="@string/ceramic" />
        <item
            android:id="@+id/nav_full"
            android:icon="@drawable/ic_favorite_grey_600_24dp"
            android:title="@string/full" />
        <item
            android:id="@+id/nav_porcelain"
            android:icon="@drawable/ic_favorite_grey_600_24dp"
            android:title="@string/porcelain" />
        <item
            android:id="@+id/nav_rustic"
            android:icon="@drawable/ic_favorite_grey_600_24dp"
            android:title="@string/rustic" />
        <!--
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email_grey_600_24dp"
            android:title="@string/contact" />
        -->

    </group>

</menu>
